<resources>
    <string name="app_name">Pokédex - Gotta Catch \'Em All</string>
    <string name="pokedex">Pokédex</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="about">About</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_stats">Base Stats</string>
    <string name="cari_pokemon">Cari Pokemon</string>
    <string name="title_favorite">Favorite</string>
    <string name="collapsing_toolbar_layout_image">Collapsing toolbar layout image</string>
    <string name="pokeball">Pokeball</string>
    <string name="empty_pokemon_placeholder">Empty Pokemon Placeholder</string>
    <string name="no_pokemon_found">No Pokemon Found</string>
</resources>