<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.nauhalf.gottacatchemall.core.domain.model.Pokemon" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        tools:background="?attr/colorGrass"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            tools:context=".ui.detail.DetailActivity">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall"
                android:layout_marginEnd="@dimen/xsmall"
                android:src="@drawable/ic_pokeball"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorWhiteAlpha10" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:contentDescription="@string/back_button"
                android:padding="@dimen/xsmall"
                android:src="?attr/homeAsUpIndicator"
                app:backgroundTint="@android:color/transparent"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:fabSize="mini"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorWhite" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_pokemon_name"
                style="@style/PoppinsBold24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:text="@{data.name}"
                android:textColor="?attr/colorWhite"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintStart_toEndOf="@+id/iv_back"
                app:layout_constraintTop_toTopOf="@id/iv_back"
                tools:text="Bulbasaur" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_pokemon_id"
                style="@style/PoppinsBold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:textColor="?attr/colorWhite"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_back"
                tools:text="#001" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/tiny"
                android:layout_marginTop="-56dp"
                android:layout_marginBottom="@dimen/tiny"
                android:animateLayoutChanges="true"
                app:cardBackgroundColor="?attr/colorWhite"
                app:cardCornerRadius="@dimen/xsmall"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/iv_pokemon">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="@dimen/large"
                    android:animateLayoutChanges="true"
                    android:paddingBottom="@dimen/large"
                    android:paddingTop="56dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_pokemon_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_pokemon_type" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_about"
                        style="@style/PoppinsBold16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/about"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rv_pokemon_type"
                        tools:textColor="?attr/colorGrass" />

                    <ImageView
                        android:id="@+id/iv_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/xsmall"
                        android:src="@drawable/ic_weight"
                        app:layout_constraintBottom_toBottomOf="@id/tv_weight_value"
                        app:layout_constraintEnd_toStartOf="@id/tv_weight_value"
                        app:layout_constraintTop_toTopOf="@id/tv_weight_value" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_weight_value"
                        style="@style/PoppinsRegular14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:layout_marginEnd="@dimen/xlarge"
                        app:layout_constraintEnd_toStartOf="@id/v_divider"
                        app:layout_constraintTop_toTopOf="@id/v_divider"
                        tools:text="6,9 kg" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_weight"
                        style="@style/PoppinsRegular12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/semi_small"
                        android:text="@string/weight"
                        android:textColor="?attr/colorMediumGray"
                        app:layout_constraintEnd_toEndOf="@id/tv_weight_value"
                        app:layout_constraintStart_toStartOf="@id/iv_weight"
                        app:layout_constraintTop_toBottomOf="@id/tv_weight_value" />

                    <View
                        android:id="@+id/v_divider"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/medium"
                        android:background="?attr/colorLightGray"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_weight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_about" />


                    <ImageView
                        android:id="@+id/iv_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xlarge"
                        android:src="@drawable/ic_height"
                        app:layout_constraintBottom_toBottomOf="@id/tv_height_value"
                        app:layout_constraintStart_toEndOf="@id/v_divider"
                        app:layout_constraintTop_toTopOf="@id/tv_height_value" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_height_value"
                        style="@style/PoppinsRegular14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginTop="@dimen/medium"
                        app:layout_constraintStart_toEndOf="@id/iv_height"
                        app:layout_constraintTop_toTopOf="@id/v_divider"
                        tools:text="0,7 m" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_height"
                        style="@style/PoppinsRegular12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/height"
                        android:textColor="?attr/colorMediumGray"
                        app:layout_constraintEnd_toEndOf="@id/tv_height_value"
                        app:layout_constraintStart_toStartOf="@id/iv_height"
                        app:layout_constraintTop_toBottomOf="@id/tv_height_value" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:layout_marginTop="@dimen/medium"
                        app:layout_constraintTop_toBottomOf="@id/v_divider">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_description"
                            style="@style/PoppinsRegular12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger." />

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shimmer_auto_start="true">

                            <include layout="@layout/shimmer_description" />

                        </com.facebook.shimmer.ShimmerFrameLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_base_stats"
                        style="@style/PoppinsBold16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/base_stats"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cl_description"
                        tools:textColor="?attr/colorGrass" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        app:layout_constraintTop_toBottomOf="@id/tv_base_stats">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_stat_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:itemCount="6" />


                        <View
                            android:id="@+id/v_divider_stats"
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:layout_marginStart="@dimen/small"
                            android:background="?attr/colorLightGray"
                            app:layout_constraintBottom_toBottomOf="@id/rv_stat_title"
                            app:layout_constraintStart_toEndOf="@id/rv_stat_title"
                            app:layout_constraintTop_toTopOf="@id/rv_stat_title" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_stat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/small"
                            android:orientation="vertical"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/xsmall"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/v_divider_stats"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:itemCount="6" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/iv_pokemon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/xlarge"
                android:contentDescription="@string/pokemon_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pokemon_name"
                tools:src="@drawable/sample_pokemon" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>